[package]
name = "rust-balancer"
version = "0.1.0"
authors = ["cyber-shah"]
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.11.3"

[[bin]]
name = "rust-balancer"
path = "src/main.rs"


